--- a/templates/add_exercise.html
+++ b/templates/add_exercise.html
@@ -56,6 +56,20 @@
        </select>
    </div>
 
+   <!-- for adding exercises from a template -->
+   <div>
+    <form method="post">
+        <label>Quick Start with Template:</label>
+        <select name="template_select">
+            <option value="">Choose a template...</option>
+            {% for template_name in workout_templates %}
+                <option value="{{ template_name }}">{{ template_name }}</option>
+            {% endfor %}
+        </select>
+        <button type="submit">Load Template</button>
+    </form>
+    </div>
+
    <!-- for adding exercises -->
    <form method="post">
        <div>
@@ -85,5 +99,14 @@
    <form action="{{ url_for('finish_workout') }}" method="post">
        <button type="submit">Finish Workout</button>
    </form>
+
+   <!-- prevents the user from leaving the page with unsaved data -->
+   <script>
+    window.onbeforeunload = function() {
+        if (document.getElementById('exerciseHistory').children.length > 0) {
+            return "You have unsaved workout data. Are you sure you want to leave?";
+        }
+    };
+    </script>
 
 {% endblock %}
